# poc-data-engineering-data-architecture-2026

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  LLM.md  README.md  SESSION_UPDATE.md  pyproject.toml
.github/workflows/: cd-production.yml  ci-dev-qa.yml  no-ai-attribution.yml  trello-pr-sync.yml
dags/: energy_ingestion_dag.py  healthcheck_dag.py
docs/: CONVENTIONS.md  ONBOARDING.md  poc-agile-plan-energy.md  poc-overview.md
docs/integrations/: trello.md
docs/sprints/: plan.yaml
docs/widgets/: energy_grid_chile.html  energy_grid_ff.html  poc_gantt_sprint_board.html
ingestion/: generate_seeds_unified.py
ingestion/consumers/: bronze_writer.py
ingestion/producers/: seed_producer.py
ingestion/schemas/: bronze_ddl.sql
scripts/hooks/: check_no_ai_attribution.py
sessions/: 2026-04-10-bootstrap.md  2026-04-11-llm-write-trello.md  2026-04-14-gatekeepers-trello-creds.md  README.md
tests/: test_smoke.py
tests/integrations/trello/: test_client.py  test_seed.py  test_sync.py
write/: generate_seeds_unified.py
write/config/: settings.py
write/consumers/: bronze_writer.py
write/integrations/trello/: __init__.py  cli.py  client.py  models.py  sync.py
write/producers/: seed_producer.py
